--- a/.env.openapi_example
+++ b/.env.openapi_example
@@ -1,2 +1,3 @@
 #This file will maintain all the env-variables
-OPENAI_API_KEY=<YOUR_API_KEY_GOES_HERE>
+OPENAI_API_KEY=<your_actual_api_key_here>
+OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
